# LLM_lecture

./: .gitignore  README.md  pyproject.toml  requirements.txt  requiremtns.txt
src/agents/: requirments.txt
src/agents/acp-agents/: README.md  acp_client.py  cat_server.py  dog_server.py  requirements.txt  requirments.txt  server.py  test_client.py
src/agents/memory/: persistent_memory.py  requirements.txt  session_memory.py
src/agents/multi-agent-investment-advisor/: README.md  multi_agent_investment_advisor.py  requirements.txt
src/agents/multi-agent-researcher/: README.md  multi_agent_researcher.py  requirements.txt  requirments.txt
src/agents/streamlit_basic/: requirments.txt  streamlit_basic_demo.py
src/api_demo/: ask_models_via_api.py  get_models_from_ollama_and_lm_studio.py  requirments.txt  streaming_demo.py  who_was_Churchill_ollma.py
src/api_demo/flux_docker_demo/: Dockerfile  demo.py
src/document_retrival/: requirments.txt
src/document_retrival/embadings/: sentenceTransformers_demo.py
src/document_retrival/retrival/: chromadb_work_with_documents.py  doc1.txt  doc2.txt  doc3.txt  generate_documents.py
src/lora/: Dockerfile  ReadMe.md  retrain.py  test_cuda.py  test_retrained.py
src/mcp_and_tools/: requirments.txt
src/mcp_and_tools/mcp/: hello_mcp_client.py  hello_mcp_client_ollama.py  hello_mcp_server.py  mcp_config.json
src/prompt_demo/: requirments.txt
src/prompt_demo/db_demo/: access_db.py  connection.py  generate_data.py  readme.md  schema.sql
src/prompt_demo/onborading_tool/: questionier_ui.py  quiz_BaseFilter.md
src/prompt_demo/promping_quality/: none_explicit_vs_explicit.py
(+3 files in other folders)
