[project]
name = "llm_lecture"
version = "0.1.0"
description = "code for my lecture"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "lmstudio>=1.5.0",
    "ollama>=0.6.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.uv]
# optional settings; uv uses this section for venv path or dev deps
dev-dependencies = []
