[project]
name = "llm_lecture"
version = "0.1.0"
description = "code for my lecture"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "diffusers>=0.35.2",
    "faker>=37.12.0",
    "huggingface-hub[cli]>=1.0.1",
    "lmstudio>=1.5.0",
    "ollama>=0.6.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.0",
]

[tool.uv]
# optional settings; uv uses this section for venv path or dev deps
dev-dependencies = []
