[project]
name = "llm_lecture"
version = "0.1.0"
description = "code for my lecture"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "acp-sdk>=0.0.6",
    "chromadb>=1.3.0",
    "diffusers>=0.35.2",
    "faker>=37.12.0",
    "huggingface-hub[cli]==0.36.0",
    "langgraph-swarm>=0.0.15",
    "lmstudio>=1.5.0",
    "ollama>=0.6.0",
    "psycopg2-binary>=2.9.11",
    "pycoingecko>=3.2.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.0",
    "yfinance>=0.2.66",
]

[tool.uv]
# optional settings; uv uses this section for venv path or dev deps
dev-dependencies = []
